[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otlmow_gui"
version = "1.0rc2"
authors = [{name = "David Vlaminck", email = "david.vlaminck@mow.vlaanderen.be"},
    {name = "Jasper Berton", email = "jasperberton1@telenet.be"},
    {name = "Christiaan Vanbergen", email = "christiaan.vanbergen.btf@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Dutch",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dependencies = [
    'PyQt6-Qt6 == 6.5.3',
    'otlmow-model >= 2.8.1',
    'otlmow-converter >= 0.12',
    'otlmow-visuals >= 0.3',
    'pyqt6 == 6.5.3',
    'qtawesome >= 1.2.3',
    'PyGithub >= 2.1.1',
    'requests >= 2.31.0',
    'PyQt6-WebEngine==6.6.0'
]


[tool.setuptools.packages.find]
include = ["Domain*", "Exceptions*", "exception_handler*", "GUI*", "img*", "locale*", "style*",]

[tool.setuptools.package-data]
"*" = [ "OTL Wizard 2.py",]

[project.urls]
"Homepage" = "https://github.com/davidvlaminck/OTLMOW-GUI"
"Bug Tracker" = "https://github.com/davidvlaminck/OTLMOW-GUI/issues"
