[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otlmow_gui"
version = "1.1.1rc5"
authors = [{name = "David Vlaminck", email = "david.vlaminck@mow.vlaanderen.be"},
    {name = "Jasper Berton", email = "jasperberton1@telenet.be"},
    {name = "Christiaan Vanbergen", email = "christiaan.vanbergen.btf@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: Dutch",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.11"
dependencies = [
    'PyQt6-Qt6 >= 6.5.3',
    'otlmow-model >= 2.8.1',
    'otlmow-converter >= 0.15rc2',
    'otlmow-visuals >= 0.3',
    'otlmow_template>=1.6',
    'pyqt6 >= 6.8.0',
    'qtawesome >= 1.2.3',
    'PyGithub >= 2.1.1',
    'requests >= 2.31.0',
    'PyQt6-WebEngine==6.6.0',
    'fonttools>=4.56.0',
    'pyperclip>=1.8.2',
    'toml>=0.10.2',
    'qasync>=0.27.1',
    'folium>=0.19.5',
    'shapely>=2.0.7',
    'pyproj>=3.7.1'
]

[tool.setuptools.packages.find]
include = ["otlmow_gui*",]

[tool.setuptools.package-data]
'*' = ['img/**', 'locale/**', 'style/*', 'demo_projects/*', 'Domain/*', 'javascripts_visualisation/*', 'lib/**', '../pyproject.toml']

[project.urls]
"Homepage" = "https://github.com/davidvlaminck/OTLMOW-GUI"
"Bug Tracker" = "https://github.com/davidvlaminck/OTLMOW-GUI/issues"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-subtests", "pytest-qt", "pytest-asyncio","xmltodict"]
install = ["pyinstaller==6.10", "pillow"]

[project.scripts]
otlwizard = "otlmow_gui.wizard_main:otl_wizard_2_main"
otlwizard2 = "otlmow_gui.wizard_main:otl_wizard_2_main"
OtlWizard = "otlmow_gui.wizard_main:otl_wizard_2_main"
OtlWizard2 = "otlmow_gui.wizard_main:otl_wizard_2_main"
otl_wizard = "otlmow_gui.wizard_main:otl_wizard_2_main"
otl_wizard_2 = "otlmow_gui.wizard_main:otl_wizard_2_main"
otlmowgui = "otlmow_gui.wizard_main:otl_wizard_2_main"